Version 2.02.86 -  
=================================
  Use lv_activate_opts struct instead of ACTIVATE_EXCL status flag.
  Add lv_activate_opts structure for activation (replacing activation flags).
  Fix a problem with inconsistent pre-commit metadata on MISSING_PV devices.
  Add proper udev library context initialization and finalization to liblvm.
  Fix last snapshot removal to avoid table reload while a device is suspended.
  Use dm_get_suspended_counter in replacement critical_section logic.
  Downgrade critical_section errors to debug level until it is moved to libdm.
  Fix ignored background polling default in vgchange -ay.
  Fix pvmove activation sequences to avoid trapped I/O with multiple LVs.
  Annotate critical section debug messages.
  Fix reduction of mirrors with striped segments to always align to stripe size.
  Validate mirror segments size.
  Fix extent rounding for striped volumes (never reduce more than requested).
  Fix create_temp_name to replace any '/' found in the hostname with '?'.
  Always use append to file in lvmdump (selinux policy - no file truncation).
  Propagate test mode to clvmd to skip activation and changes to held locks.
  Defer writing PV labels to vg_write.
  Store label_sector only in struct physical_volume.
  Permit --available with lvcreate so non-snapshot LVs need not be activated.
  Report sector containing label in verbose message.
  Clarify error message when unable to convert an LV into a snapshot of an LV.
  Add and use dev_open_readonly and variations.
  Do not log a superfluous stack message when the lv is properly processed.
  Do not issue an error message when unable to remove .cache on read-only fs.
  Avoid memlock size mismatch by preallocating stdio line buffers.
  Reorganize lvconvert --repair code to allow reuse.
  Rewrite vgreduce --removemissing --force leveraging shared lvconvert code.

Version 2.02.85 - 29th April 2011
=================================